force-app/main/default/objects/Premise_Margin__c/Premise_Margin__c.object-meta.xml
<CustomObject>
    <label>Premise Margin</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Premise Margin ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premise Margins</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>