force-app/main/default/objects/Premise_Margin__c/fields/Contract_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Margin__c</fullName>
    <label>Contract Margin</label>
    <referenceTo>Contract_Margin__c</referenceTo>
    <relationshipLabel>Premise Margins</relationshipLabel>
    <relationshipName>Premise_Margins</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>