force-app/main/default/objects/Premise_Margin__c/fields/Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>Margin_Type__c</fullName>
    <label>Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>New Additional</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Renewal Additional</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>