force-app/main/default/objects/Premise_Margin__c/fields/Premise_Pctg_of_Contract_Volume__c.field-meta.xml
<CustomField>
    <fullName>Premise_Pctg_of_Contract_Volume__c</fullName>
    <label>Premise Pctg of Contract Volume</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>