force-app/main/default/objects/Premise_Margin__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Process</label>
    <type>Checkbox</type>
</CustomField>