force-app/main/default/objects/Premise_Margin__c/fields/Volume__c.field-meta.xml
<CustomField>
    <fullName>Volume__c</fullName>
    <description>Volume in MMBtu</description>
    <inlineHelpText>Volume in MMBtu</inlineHelpText>
    <label>Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>